chore: add more fine grained setting if comments should be rendered - all or only open
